Revert "OSC Beta V0.5.2 (working)"
This reverts commit b8222b817194c5da8cba936c37238847d47f264a.